# Incognote

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY_REPORT.md  docker-compose.yml
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/db/: mod.rs
auth-service/src/models/: mod.rs
auth-service/src/routes/: auth.rs  health.rs
auth-service/src/services/: geoip.rs  jwt.rs  mod.rs  password.rs  rate_limit.rs
auth-service/tests/: security_flow.rs
database/: schema.sql
frontend/: index.html
notes-service/: Cargo.toml  Dockerfile
notes-service/src/: app_state.rs  lib.rs  main.rs
notes-service/src/db/: mod.rs
notes-service/src/models/: mod.rs
notes-service/src/routes/: health.rs  notes.rs
notes-service/src/services/: auth_client.rs  encryption.rs  jwt.rs  mod.rs
notes-service/tests/: auth_client_fail_safe.rs  encryption_security.rs
security_examples/: insecure_examples.rs
src/: main.rs
src/app/: app_error.rs  app_state.rs  app_state_factory.rs  mod.rs
src/db/: user_repository.rs
src/models/: mod.rs
src/models/auth/: auth_response.rs  auth_user_response.rs  google_auth_callback_query.rs  mod.rs  register_request.rs  register_response.rs  resend_verification_request.rs  verify_email_query.rs
src/models/common/: error_response.rs  message_response.rs  mod.rs
src/models/health/: health_response.rs  mod.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs  register.rs  resend_verification.rs  verify_email.rs
src/routes/auth/google_auth/: callback.rs  mod.rs  start.rs
src/services/auth/: mail_service.rs  mod.rs  user_service.rs
