[package]
name = "incognote-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

[dev-dependencies]
serde_json = "1.0.137"
