[package]
name = "incognote-notes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notes-service"
path = "src/main.rs"

[dependencies]
axum = "0.8.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.137"
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.8"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.39", features = ["serde"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
